# pygenpass

./: .gitignore  pyproject.toml
pygenpass/: args.py  errors.py  main.py  password.py
tests/: test_generate_password.py  test_genpass.py  test_read_args.py
