[tool.poetry]
name = "pygenpass"
version = "0.1.0"
description = ""
authors = ["Alexander Alarcon <walarcon14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
